# TestWork

app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: action.cpp  action.hpp  actionsexecutor.cpp  actionsexecutor.hpp  filereader.cpp  filereader.hpp  subaction.cpp  subaction.hpp  sumaction.cpp  sumaction.hpp  xoraction.cpp  xoraction.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp  testactionsexecutor.cpp  testactionsexecutor.hpp  testfilereader.cpp  testfilereader.hpp  testsubaction.cpp  testsubaction.hpp  testsumaction.cpp  testsumaction.hpp  testxoraction.cpp  testxoraction.hpp
